--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,69 @@
 		"xlocnum": "cpp",
 		"xloctime": "cpp",
 		"xtr1common": "cpp",
-		"xutility": "cpp"
+		"xutility": "cpp",
+		"any": "cpp",
+		"array": "cpp",
+		"strstream": "cpp",
+		"barrier": "cpp",
+		"bitset": "cpp",
+		"cfenv": "cpp",
+		"chrono": "cpp",
+		"cinttypes": "cpp",
+		"codecvt": "cpp",
+		"complex": "cpp",
+		"condition_variable": "cpp",
+		"coroutine": "cpp",
+		"csetjmp": "cpp",
+		"csignal": "cpp",
+		"cstdarg": "cpp",
+		"cuchar": "cpp",
+		"cwctype": "cpp",
+		"deque": "cpp",
+		"forward_list": "cpp",
+		"list": "cpp",
+		"map": "cpp",
+		"set": "cpp",
+		"unordered_map": "cpp",
+		"unordered_set": "cpp",
+		"expected": "cpp",
+		"algorithm": "cpp",
+		"functional": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"optional": "cpp",
+		"random": "cpp",
+		"ratio": "cpp",
+		"regex": "cpp",
+		"source_location": "cpp",
+		"string_view": "cpp",
+		"flat_map": "cpp",
+		"flat_set": "cpp",
+		"fstream": "cpp",
+		"future": "cpp",
+		"generator": "cpp",
+		"iomanip": "cpp",
+		"latch": "cpp",
+		"mutex": "cpp",
+		"numbers": "cpp",
+		"print": "cpp",
+		"queue": "cpp",
+		"ranges": "cpp",
+		"scoped_allocator": "cpp",
+		"semaphore": "cpp",
+		"shared_mutex": "cpp",
+		"span": "cpp",
+		"spanstream": "cpp",
+		"sstream": "cpp",
+		"stack": "cpp",
+		"stacktrace": "cpp",
+		"stdfloat": "cpp",
+		"stop_token": "cpp",
+		"syncstream": "cpp",
+		"text_encoding": "cpp",
+		"thread": "cpp",
+		"typeindex": "cpp",
+		"valarray": "cpp",
+		"variant": "cpp"
 	}
 }
